deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app-v1
  annotations:
    harness.io/direct-apply: "true"
  labels:
    app: canary-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-app
      version: v1
  template:
    metadata:
      labels:
        app: canary-app
        version: v1
    spec:
      containers:
        - name: canary-app
          image: sukanya996/bule-green:green-47
          ports:
            - containerPort: 5000
