deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-app-v2
  labels:
    app: canary-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-app
      version: v2
  template:
    metadata:
      labels:
        app: canary-app
        version: v2
    spec:
      containers:
        - name: canary-app
          image: sukanya996/bule-green:green-47
          ports:
            - containerPort: 5000
