canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app-canary
spec:
  selector:
    app: canary-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
