svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-app
spec:
  selector:
    app: canary-app
  ports:
    - port: 5000
      targetPort: 5000
