destination.yaml
#DestinationRule: Define Service Versions
# Purpose:Defines subsets (like v1, v2) for a service that Istio can route traffic to.
# What it does:
    #Labels versions (v1, v2) for the service canary-app.
    #Enables fine-grained traffic routing.
    #Supports features like load balancing, circuit breaking, etc.

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: canary-app
spec:
  host: canary-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
