virtual-svc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: canary-app
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/canary-gateway
  http:
    - route:
        - destination:
            host: canary-app
            subset: v1
          weight: 50
        - destination:
            host: canary-app
            subset: v2
          weight: 50
